--- a/global-style-2.css
+++ b/global-style-2.css
@@ -1,8 +1,7 @@
 body {
   margin: 0;
   background-color: #f6f5f4;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: 'Golos Text';
 }
 
 .layout-container {
